<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoggedInActivity"
    android:background="@drawable/navbar_grade"

    >

    <View
        android:id="@+id/view_header"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/view_header"
        app:layout_constraintStart_toStartOf="@+id/view_header"
        app:layout_constraintTop_toTopOf="@+id/view_header"
        app:srcCompat="@drawable/book_icon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_header_text"
        app:layout_constraintBottom_toBottomOf="@+id/view_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:textColor="@color/white"/>

    <View
        android:id="@+id/View_signed_in_info"
        android:layout_width="359dp"
        android:layout_height="291dp"
        android:background="@drawable/gradient_and_round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_header"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_logged_in_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXAMPLE FOR NOW"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_header"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/btn_back_to_home_page_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_back_to_home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View_signed_in_info"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/signed_in_message"
        app:layout_constraintBottom_toTopOf="@+id/tv_logged_in_welcome"
        app:layout_constraintEnd_toEndOf="@+id/View_signed_in_info"
        app:layout_constraintStart_toStartOf="@+id/View_signed_in_info"
        app:layout_constraintTop_toTopOf="@+id/View_signed_in_info" />

</androidx.constraintlayout.widget.ConstraintLayout>